# create-introductions-issues

./: .bumpversion.cfg  AGENTS.md  Makefile  README.md  environment.yml  make.cmd  pyproject.toml
config/: config.ini
docsrc/: mkdocs.yml
docsrc/mkdocs/: api.md  cookiecutter_reference.md  index.md  logging.md
notebooks/: notebook-template.ipynb
scripts/: config.py  make_data.py  make_introduction_issues.py  make_pyt_archive.py
src/create_introductions_issues/: __init__.py  _main.py
src/create_introductions_issues/utils/: __init__.py  _logging.py  _main.py
testing/: conftest.py  test_create_introductions_issues.py
