[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-introductions-issues"
version = "0.5.0.dev0"
authors = [
  { name="Joel McCune (https://github.com/knu2xs)"},
]
description = "Create GitHub issues for all introductions tasks."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
license = {file = "LICENSE"}
dependencies = [
    "pandas>=1.0.5",
    "requests>=2.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["create_introductions_issues"]
